--- a/start-here/.eslintrc.json
+++ b/start-here/.eslintrc.json
@@ -5,7 +5,9 @@
     "prettier"
   ],
   "rules": {
-    "no-console": "warn"
+    "no-console": "warn",
+    "no-duplicate-imports": "off",
+    "import/no-duplicates": "error"
   },
   "plugins":["import"],
   "parserOptions": {
