--- a/start-here/package.json
+++ b/start-here/package.json
@@ -2,8 +2,10 @@
   "name": "start-here",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/init.js",
   "scripts": {
+    "tsc": "tsc",
+    "build": "parcel build src/index.html",
     "dev": "parcel src/index.html",
     "test": "jest"
   },
@@ -16,9 +18,10 @@
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.4.7",
     "parcel-bundler": "^1.12.5",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   },
-  "browserslist" : [
+  "browserslist": [
     "last 2 Chrome versions"
   ]
 }
